--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,148 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* main container */
+#container{
+  width: 100%;
+  height: 100vh;
+  background: rgb(180,2,238);
+  background: linear-gradient(130deg, rgba(180,2,238,1) 0%, rgba(7,255,216,1) 0%, rgba(243,255,27,1) 100%, rgba(0,212,255,1) 100%);
   display: flex;
-  flex-direction: column;
+  justify-content: space-evenly;
   align-items: center;
+}
+
+/* div inside container */
+#container>div{
+  width: 35%;
+  height: 200px;
+  background-color: white;
+  box-shadow: 0px 0px 8px 4px lightgray;
+  border-radius: 10px;
+}
+
+#first{
+  /* background-color:; */
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+}
+.heading{
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: capitalize;
 }
 
-.App-link {
-  color: #61dafb;
+#second{
+  /* background-color: yellow; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+/* selector */
+select{
+  width: 50%;
+  height: 30px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* new rules */
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+  cursor: pointer;
+}
+
+/* tooltiptext */
+.tooltiptext {
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+
+  /* Position the tooltip */
+  position: absolute;
+  z-index: 1;
+}
+
+/* right */
+.right {
+  margin-left: 20px;
+  top: -5px;
+  left: 105%;
+}
+
+/* left */
+.left {
+  margin-right: 20px;
+  top: -5px;
+  right: 105%;
+}
+
+/* top */
+.top {
+  margin-bottom: 20px;
+  width: 120px;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+/* bottom */
+.bottom {
+  margin-top: 20px;
+  width: 120px;
+  top: 100%;
+  left: 50%;
+  margin-left: -60px;
+}
+
+/* top bottom arrow */
+.top::after {
+  content: " ";
+  position: absolute;
+  top: 100%; /* At the bottom of the tooltip */
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
+/* bottom top arrow */
+.bottom::after {
+  content: " ";
+  position: absolute;
+  bottom: 100%;  /* At the top of the tooltip */
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent black transparent;
+}
+
+/* right left arrow */
+.right::after {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  right: 100%; /* To the left of the tooltip */
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent black transparent transparent;
+}
+
+/* left right arrow */
+.left::after {
+  content: " ";
+  position: absolute;
+  top: 50%;
+  left: 100%; /* To the right of the tooltip */
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent transparent transparent black;
 }
